# pycounts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_my_py_counter.py
